Tentatively goes into WebVR presentation mode if page listens to vrdisplayactivate.

- When the user puts the phone into the headset VR browser goes into WebVR presentation mode if the page listens to vrdisplayactivate.
- If the page does not request presentation in the vrdisplayactivate handler browser exits presentation and goes into VrShell.

BUG=703315

Review-Url: https://codereview.chromium.org/2844833005
Cr-Commit-Position: refs/heads/master@{#468526}

Former-commit-id: 740768575325237705b0249460683fcf692bbd1e