device/vr/vr_display_impl.h
@@ -35,7 +35,8 @@ class VRDisplayImpl : public mojom::VRDisplay {
   virtual void OnExitPresent();
   virtual void OnBlur();
   virtual void OnFocus();
-  virtual void OnActivate(mojom::VRDisplayEventReason reason);
+  virtual void OnActivate(mojom::VRDisplayEventReason reason,
+                          const base::Callback<void(bool)>& on_handled);
   virtual void OnDeactivate(mojom::VRDisplayEventReason reason);
 
  private:
