device/vr/test/fake_vr_display_impl_client.h
@@ -23,7 +23,8 @@ class FakeVRDisplayImplClient : public mojom::VRDisplayClient {
   void OnExitPresent() override {}
   void OnBlur() override {}
   void OnFocus() override {}
-  void OnActivate(mojom::VRDisplayEventReason reason) override {}
+  void OnActivate(mojom::VRDisplayEventReason reason,
+                  const OnActivateCallback& callback) override {}
   void OnDeactivate(mojom::VRDisplayEventReason reason) override {}
 
  private:
